--- a/layouts/layouts.module.css
+++ b/layouts/layouts.module.css
@@ -215,6 +215,8 @@
     main {
       @apply max-w-[660px]
         gap-4;
+
+      word-break: break-all;
     }
   }
 }
